# python-basic-final-project

./: README.md  docker-compose.yaml  pyproject.toml
gis/fixtures/: kindterzone-fixture.json  terzone-fixture.json
gis/gis/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
gis/site_auth/: urls.py  views.py
gis/static_files/: leaflet.css
gis/templates/: base.html  base_map.html  index.html
gis/terzone/: admin.py  apps.py  forms.py  geoserver.py  models.py  task.py  urls.py  views.py
gis/terzone/migrations/: 0001_initial.py  0002_change_terzone.py  0003_change_field_terzone.py  0004_change_srid_terzone.py  0005_create_kind_terzone.py  0006_create_plan_reg.py  0007_add_field_index_planreg.py  0008_change_fields_planreg.py  0009_add_field_terzones_planreg.py  0010_add_field_kind_terzone_terzoneexist.py  0011_change_field_status_terzoneexist.py  0012_change_field_kindterzone_planreg.py
gis/terzone/templates/terzone/: attr_feature.html  bbox_feature.html  index.html  kindterzone.html  kindterzone_form.html  planregulation_confirm_delete.html  planregulation_detail.html  planregulation_form.html  planregulation_list.html  planregulation_update_form.html  terzone_wmts.html  terzoneexist_detail.html  terzones.html  terzones_map.html  test.html
gis/terzone/tests/: test_index_views.py  test_planregs.py  test_terzones.py
