[tool.poetry]
name = "sales-shop"
version = "0.1.0"
description = ""
authors = ["maria <xxmarrria@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.2"
celery = "^5.3.1"
django-celery-results = "^2.5.1"
django-mail-templated = "^2.6.5"
factory-boy = "^3.3.0"
psycopg2 = "^2.9.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.1.0"
#faker = "^19.2.0"
#faker-music = "^0.4"
#mixer = "^7.2.2"